# django-postgresql

./: README.md  db.sqlite3  pyproject.toml
academia/: settings.py  urls.py
inventory/: models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_locations_inventory_identifier.py
inventory/utils/: auth.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
