[tool.poetry]
name = "django-postgresql"
version = "0.1.0"
description = ""
authors = ["siobhanmt3 <martinezsiobhan0@gmail.com>"]
readme = "README.md"
packages = [{include = "django_postgresql"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
